[package]
name = "sparsegraph"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = "0.4"

[build-dependencies]
rand = { version = "0.8.4", features = ["rand_chacha", "min_const_gen"] }
rand_chacha = { version = "0.3.1", features = ["simd"] }

[[bench]]
name = "dfs"
harness = false

[[bench]]
name = "bfs"
harness = false

[[bench]]
name = "static_graph"
harness = false

[profile.dev]
opt-level = 1
debug = true
overflow-checks = false

[profile.release]
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = false
lto = true
debug-assertions = false
codegen-units = 1
strip = true
